chore: defer plugin loading
